application-manifests/05-personal-vault/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: personal-vault
  namespace: apps
  labels:
    app: personal-vault
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: personal-vault
